--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,6 +59,8 @@
                     <a href="#">Join Us</a>
                 </div> 
             </div>
+            <div id="members-container"></div>
+
         </section>
 
         <section class="events-container">
@@ -104,7 +106,8 @@
         </div>
         <footer>
             <p>&copy; <span id="currentYear"></span> .:|:. Sumara Prieto .:|:. Missouri <img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="20" height="10" loading="lazy"></p>
-            <p id="lastModified"></p>
+            <span id="currentYear"></span>
+<span id="lastModified"></span>
 
     </footer>
     <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
