--- a/chamber/index.html
+++ b/chamber/index.html
@@ -105,11 +105,27 @@
         <p>Phone: 417-5990418</p>
         </div>
         <footer>
+            <div class="footer-image-logo">
+                <img src="images/footer-logo.webp" alt="Springfield Chamber of Commerce Logo" width="200" height="150" loading="lazy">
+                <div class="footer-main-sm">
+                    <a href="https://www.facebook.com" target="_blank" aria-label="Follow us on Facebook">
+                        <div class="footer-main-sm-fb"></div>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank" aria-label="Follow us on Instagram">
+                        <div class="footer-main-sm-in"></div>
+                    </a>
+                </div>
+            </div>
+            <div class="footer-contact-information">
+                <p><span id="footer-address">Address:</span></p>
+                <p>S. John Q Hammons Pwy</p>
+                <p>Springfield, MO</p> 
+                <p>Phone: 417-5990418</p>
+            </div>
             <p>&copy; <span id="currentYear"></span> .:|:. Sumara Prieto .:|:. Missouri <img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="20" height="10" loading="lazy"></p>
-            <span id="currentYear"></span>
-<span id="lastModified"></span>
-
-    </footer>
+            <p id="lastModified"></p>
+        </footer>
+        
     <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     <script src="scripts/script.js"></script>
     <script src="scripts/darkMode.js"></script>
