--- a/chamber/index.html
+++ b/chamber/index.html
@@ -113,7 +113,7 @@
             </div>
         
             <!-- Copyright Information -->
-            <p>&copy; <span id="currentYear"></span> .:|:. Sumara Prieto .:|:. Missouri <img src="images/Flag_of_Missouri.webp" alt="Flag of Missouri" width="20" height="10" loading="lazy"></p>
+            <p>&copy; <span id="currentYear"></span> .:|:. Sumara Prieto .:|:. Missouri </p>
             <p id="lastModified"></p>
         </footer>        
         
