--- a/chamber/index.html
+++ b/chamber/index.html
@@ -95,10 +95,10 @@
             <div class="footer-image-logo">
                 <img src="images/footer-logo.webp" alt="Springfield Chamber of Commerce Logo" width="200" height="150" loading="lazy">
                 <div class="footer-main-sm">
-                    <a href="https://www.facebook.com" target="_blank" aria-label="Follow us on Facebook">
+                    <a href="images/facebook_icon.png" target="_blank" aria-label="Follow us on Facebook">
                         <div class="footer-main-sm-fb"></div>
                     </a>
-                    <a href="https://www.instagram.com" target="_blank" aria-label="Follow us on Instagram">
+                    <a href="images/Instagram_icon.png" target="_blank" aria-label="Follow us on Instagram">
                         <div class="footer-main-sm-in"></div>
                     </a>
                 </div>
