--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <li>Week 07: <a href="lesson07/lazyload.html" target="_blank">Lazy-load</a></li> 
               <li>Week 08</li>
               <li>Week 09: <a href="lesson09/new-ward-members.json" target="_blank">JSON</a> | <a href="lesson09/prophets.html" target="_blank">Latter-day Prophets</a></li>
-              <li>Week 10</li>
+              <li>Week 10: <a href="lesson10/weather.html" target="_blank">Weather</a></li>
               <li>Week 11</li> 
               <li>Week 12</li>
               
