--- a/lesson10/weather.html
+++ b/lesson10/weather.html
@@ -4,6 +4,51 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather API Test</title>
+  <style>
+    /* Basic reset for margin and padding */
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: Arial, sans-serif;
+    }
+
+    /* Center content horizontally and vertically */
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f4f4f9; /* Light gray background */
+    }
+
+    main {
+      text-align: center;
+      padding: 20px;
+      background-color: white; /* White background for the content */
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Light shadow */
+      width: 80%;
+      max-width: 500px; /* Max width for better responsive design */
+    }
+
+    /* Style for the footer */
+    footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #f1f1f1; /* Light banner color */
+      text-align: center;
+      padding: 10px;
+      font-size: 14px;
+      color: #555; /* Slightly darker text */
+    }
+
+    footer a {
+      color: #555;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <h1>OpenWeatherMap.org API Test</h1>
