--- a/index.html
+++ b/index.html
@@ -66,15 +66,13 @@
     <div id="links"></div>
 
     <section class="card">
-      <h3>Information</h3>
+      <h2>Weather Information</h2>
       <div class="weather-content">
         <h4>Springfield, MO</h4>
-        <p><span class="data-label">Conditions: </span><span id="conditions">Sunny</span> </p>
-        <p><span class="data-label">Temperature (°F): </span><span id="current-temperature">91</span></p>
-        <p><span class="data-label">Wind (mph): </span><span id="wind-speed">5</span></p>
-        <p><span class="data-label">Wind Chill (°F):  </span><span id="wind-chill-value"></span></p>
-        <p><span class="data-label">Humidity (%): </span>80</p>
-        <p><span class="data-label">Number of Visits: </span><span class="num-visits"></span></p>
+        <p id="temperature">Temperature: --°F</p>
+        <p id="weather-description">Condition: ---</p>
+        <img id="weather-icon" src="" alt="Weather icon">
+        <p><span class="data-label">Number of Visits: </span><span class="num-visits">0</span></p>
       </div>
     </section> 
 
@@ -104,5 +102,6 @@
   <script src="scripts/localStorage.js"></script>
   <script src="scripts/windchill.js"></script>
   <script src="scripts/links.js"></script>
+  <script src="scripts/weather.js"></script>
 </body>
 </html>
