--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <main class="container-main">
 
     <div class="hero">
+      <h2 class="main-title">WDD 230: Web Frontend Development</h2>
       <picture>
         <source media="(max-width: 540px)" srcset="images/hero-small.webp">
         <source media="(max-width: 820px)" srcset="images/hero-medium.webp">
@@ -62,7 +63,6 @@
 
       <div class="overlay">Kansas City, MO Temple</div>
     </div>
-    <h2>WDD 230: Web Frontend Development</h2>
   
     <section class="card">
       <h3>Learning Activities</h3>
