--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="card">
       <h3>Learning Activities</h3>
       <hr>
-      <div id="links"></div>
+      <div id="linksContainer"></div>
       <hr>
   </section>
 
