--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,9 +44,6 @@
                 <li><a href="join.html">Join</a></li>
             </ul>
         </nav>
-        <button id="dark-mode-toggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode">
-            🌙
-        </button>
                  
     </header>
 
@@ -132,8 +129,9 @@
                 <p>Last Modification: <span id="lastModified"></span></p>
             </div> 
         </footer>
+        <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
         <script src="scripts/script.js" defer></script>
-        <script src="scripts/darkMode.js" defer></script>
+        <script src="scripts/darkMode.js"></script>
         <script src="scripts/windchill.js" defer></script>
         <script src="scripts/weather.js" defer></script>
         <script src="scripts/banner.js" defer></script>
