--- a/chamber/join.html
+++ b/chamber/join.html
@@ -29,11 +29,6 @@
     
 </head>
 <body>
-    <!-- Dark Mode Toggle -->
-    <label class="dark-mode-toggle">
-        <input type="checkbox" id="darkModeSwitch">
-        <span class="slider round"></span>
-    </label>
     
     <!-- Header -->
     <header class="header-main">
@@ -158,6 +153,8 @@
         document.getElementById('form-date').value = Date.now();
         </script>
         <script src="scripts/formDate.js"></script>
+        <script src="scripts/darkMode.js"></script>
+        <script src="scripts/script.js"></script>
 
  </body>
 </html>
