--- a/chamber/join.html
+++ b/chamber/join.html
@@ -34,7 +34,8 @@
     <header class="header-main">
         <a id="menu" href="#" title="Hamburger menu"></a>
         <div class="header-main-logo">
-            <img src="images/springfield-chamber-logo.webp" id="logo-img" alt="Chamber logo" width="100" height="60">   
+            <img src="images/springfield-chamber-logo.webp" id="logo-img" alt="Chamber logo" width="100" height="60"> 
+            <h1>Springfield, MO Chamber of Commerce</h1>  
         </div>
         <nav>
             <ul>
