--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="https://assets.simpleviewinc.com/simpleview/image/upload/c_limit,q_75,w_1200/v1/crm/springfield/bass-pro-exterior-sr-1093-1-_b289f6d1-5056-a348-3ad9c56cf23f0548.jpg"> 
   <meta property="og:url" content="https://sumapri.github.io/wdd230/">
 
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="images/favicon.ico">
   <!-- Custom Normalization CSS -->
   <link rel="stylesheet" href="styles/normalize.css">
   <!-- Your custom styles -->
