--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="styles/larger.css">
 
  <!-- Favicon -->
-    <link rel="icon" href="favicon1.ico"> 
+    <link rel="icon" href="images/favicon1.ico"> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,10 +33,11 @@
     <header class="header-main">
         <a id="menu" href="#" title="Hamburger menu"></a>
         <div class="header-main-logo">
-            <img src="images/springfield-chamber-logo.webp" id="logo-img" alt="Chamber logo" width="100" height="60">   
+            <img src="images/springfield-chamber-logo.webp" id="logo-img" alt="Chamber logo" width="100" height="60"> 
+            <h1>Springfield, MO Chamber of Commerce</h1>  
         </div>
         <nav>
-            <button id="hamburger" aria-label="Toggle navigation">☰</button>
+            <button id="hamburger" aria-label="Toggle navigation"></button>
             <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discovery</a></li>
