--- a/chamber/join.html
+++ b/chamber/join.html
@@ -182,7 +182,7 @@
         // Set the value of the hidden input field with the current timestamp
         document.getElementById('form-date').value = Date.now();
         </script>
-        <script src="scripts/formDate.js"></script>
+        <script src="scripts/form.js"></script>
         <script src="scripts/darkMode.js"></script>
         <script src="scripts/script.js"></script>
 
