--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <h1>Sumara Prieto</h1>
     </div>
 
+    <div class="nav-container">
     <nav>
       <button id="hamburger" aria-label="Toggle navigation">☰</button>
       <ul id="nav-links">
@@ -47,6 +48,7 @@
         <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng">Scripture</a></li>
       </ul>
     </nav>
+    </div>
     <button id="dark-mode-toggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode">
       🌙
   </button>
@@ -84,12 +86,10 @@
     </section> 
 
 
-
       <!-- Map Section -->
     <section class="map-container"> 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206055.8390634004!2d-92.436836!3d38.30466245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0e6d54822e37d%3A0xb55bc4590466bd72!2sMissouri!5e0!3m2!1sen!2sus!4v1728764416011!5m2!1sen!2sus" title="Kansas City, MO" loading="lazy" frameborder="0" allowfullscreen></iframe>
     </section>
-
   </main>
 
   <footer>
@@ -97,9 +97,7 @@
     <p id="last-modified"></p>
   </footer>
 
-  <script> 
-    document.getElementById('last-modified').textContent = `lastModified: ${document.lastModified}`;
-  </script>
+  <script src="scripts/lastModified.js"></script>
   <script src="scripts/links.js"></script>
   <script src="scripts/getdates.js"></script>
   <script src="scripts/hamburger.js"></script> <!-- Link to the new hamburger.js -->
