--- a/chamber/index.html
+++ b/chamber/index.html
@@ -85,6 +85,7 @@
                             <p><span class="data-label">Number of Visits: </span><span class="num-visits">0</span></p>
                           </div>
                         </div>
+                    </section>
 
  <!-- Member Spotlights Section -->
         <section id="spotlights" class="card">
