--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,7 +31,7 @@
     
     <!-- Header -->
     <header class="header-main">
-        <a id="menu" href="#" title="Hamburger menu"></a>
+        <a id="menu" href="javascript:void(0)" title="Hamburger menu"></a>
         <div class="header-main-logo">
             <img src="images/springfield-chamber-logo.webp" id="logo-img" alt="Chamber logo" width="100" height="60"> 
             <h1>Springfield, MO Chamber of Commerce</h1>  
@@ -102,7 +102,7 @@
          <!-- Meet & Greet Banner -->
 <div id="event-banner" class="event-banner">
     <p>Join us for the Chamber of Commerce Meet and Greet on Wednesday at 7:00 p.m.</p>
-    <button id="close-banner" aria-label="Close">✖</button>
+    <button id="close-banner" aria-label="Close banner">✖</button>
 </div>
 
     </main>
@@ -117,7 +117,7 @@
         </p>
 
             <div class="footer-image-logo">
-                <img src="images/footer-logo.webp" alt="Logo of Chamber of Commerce" width="100" height="50" loading="lazy">
+                <img src="images/footer-logo.webp" alt="Footer logo" width="100" height="50" loading="lazy">
                 </div>
 
             <div class="footer-contact-information">
