--- a/chamber/index.html
+++ b/chamber/index.html
@@ -132,11 +132,11 @@
             </div> 
         </footer>
         <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
-        <script src="scripts/script.js" defer></script>
+        <script src="scripts/script.js"></script>
         <script src="scripts/darkMode.js"></script>
-        <script src="scripts/windchill.js" defer></script>
-        <script src="scripts/weather.js" defer></script>
-        <script src="scripts/banner.js" defer></script>
+        <script src="scripts/windchill.js"></script>
+        <script src="scripts/weather.js"></script>
+        <script src="scripts/banner.js"></script>
 </body>
 </html>
 
