--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -54,7 +54,7 @@
                 <th>Full Day Walk-In</th>  
               </tr>  
            </thead>  
-           <tbody id="rental-data.json"></tbody>  
+           <tbody id="rental-data"></tbody>  
         </table>  
       </section>  
    </main>  
