--- a/scoots/index.html
+++ b/scoots/index.html
@@ -29,7 +29,7 @@
    <main>  
       <section class="hero">  
         <h1>Welcome to Scoots</h1>  
-        <p>Motor Scooter/Jeeps Rentals on the island of Cozumel, Mexico</p>  
+        <p>Motor Scooter, ATVs and Jeeps Rentals on the island of Cozumel, Mexico</p>  
         <a href="reservations.html">
           <form id="reservation-form">  
          <button type="submit">Make a Reservation</button>  
