--- a/scoots/index.html
+++ b/scoots/index.html
@@ -30,10 +30,10 @@
       <section class="hero">  
         <h1>Welcome to Scoots</h1>  
         <p>Motor Scooter, ATVs and Jeeps Rentals on the island of Cozumel, Mexico</p>  
-        <a href="reservations.html">
-          <form id="reservation-form">  
-         <button type="submit">Make a Reservation</button>  
-        </form>  
+        <form id="reservation-form" action="reservations.html" method="POST">  
+          <button type="submit">Make a Reservation</button>  
+      </form>
+        
       </section>  
       <section class="weather">  
         <h2>Current Weather</h2>  
