--- a/scoots/index.html
+++ b/scoots/index.html
@@ -30,9 +30,10 @@
       <section class="hero">  
         <h1>Welcome to Scoots</h1>  
         <p>Motor Scooter, ATVs and Jeeps Rentals on the island of Cozumel, Mexico</p>  
-        <form id="reservation-form" action="reservations.html" method="POST">  
-          <button type="submit">Make a Reservation</button>  
-      </form>
+        <a href="reservations.html">
+          <button type="button">Make a Reservation</button>  
+      </a>
+      
         
       </section>  
       <section class="weather">  
