--- a/scoots/index.html
+++ b/scoots/index.html
@@ -30,10 +30,9 @@
       <section class="hero">  
         <h1>Welcome to Scoots</h1>  
         <p>Motor Scooter, ATVs and Jeeps Rentals on the island of Cozumel, Mexico</p>  
-        <a href="reservations.html">
-          <button type="button">Make a Reservation</button>  
-      </a>
-      
+        <form id="reservation-form" onsubmit="window.location.href='reservations.html'; return false;">
+          <button type="submit">Make a Reservation</button>
+      </form> 
         
       </section>  
       <section class="weather">  
