--- a/scoots/index.html
+++ b/scoots/index.html
@@ -41,7 +41,7 @@
         <p id="current-humidity"></p>  
         <p id="next-day-forecast"></p>  
         <p id="weather-description"></p>  
-        <img id="weather-icon" src="" alt="">  
+        <img id="weather-icon" src="default-image.png" alt="Weather icon">  
       </section>  
       <section class="home-rides-info">
          <h2 class="separator">Choose Your Ride!</h2>
